--- a/public/catalog.html
+++ b/public/catalog.html
@@ -2379,11 +2379,11 @@
           <button
             class="w-20 lg:w-24 h-42 transition duration-200 hover:bg-gray-100 border-r px-2.5 py-1">Previous</button>
 
-          <a href="#" class="w-10 h-full transition duration-200 hover:bg-gray-100 border-r px-2.5 py-1">1</a>
+          <a href="#" class="flex items-center justify-center w-10 h-full transition duration-200 hover:bg-gray-100 border-r px-2.5 py-1">1</a>
 
-          <a href="#" class="w-10 h-full transition duration-200 hover:bg-gray-100 border-r px-2.5 py-1">2</a>
+          <a href="#" class="flex items-center justify-center w-10 h-full transition duration-200 hover:bg-gray-100 border-r px-2.5 py-1">2</a>
 
-          <a href="#" class="w-10 h-full transition duration-200 hover:bg-gray-100 border-r px-2.5 py-1">3</a>
+          <a href="#" class="flex items-center justify-center w-10 h-full transition duration-200 hover:bg-gray-100 border-r px-2.5 py-1">3</a>
           <!-- Next btn -->
           <button class="w-20 lg:w-24 h-42 transition duration-200 hover:bg-gray-100 border-l px-2.5 py-1">Next</button>
         </div>
